Proyecto realizado en ONE completado

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               autocomplete="off"
               data-form-input
             />
+            <input type="datetime-local" data-form-date placeholder="YYYY/MM/DD"/>
             <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
@@ -40,6 +41,8 @@
         </ul>
       </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.2.0/uuid.min.js" integrity="sha512-X0CJvcClD8EXFn5Oq8BD5lIsznKDfxb0Sf9Wr8MCCTyAEWaAAxr0Jvm3qyofsmN7eSHMZ0PPQGjVKroLAfexrA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><!-- Importando librería uuid (Manejo de identificadores únicos) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script><!-- Importando librería moment (Manejo de Fechas) -->
     <script type="module" src="script.js"></script>
   </body>
 </html>
